spacing issue with footer image

--- a/index1.css
+++ b/index1.css
@@ -269,7 +269,7 @@ display: flex;}
 
 .footer-contact img {
     width: 20px;
-    height: unset;
+    height: 20px;
     padding-left: 10px;   
 }
 
